fixed up some alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1026,7 +1026,7 @@ i {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 90%;
+    width: 100%;
     height: 85vh;
   }
 
@@ -1094,7 +1094,7 @@ i {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 90%;
+    width: 100%;
     /* margin-bottom: 1480px; */
   }
 
